2014-09-23  Alexey Proskuryakov  <ap@apple.com>

        Trying to revive bot watcher's dashboard after HSTS.

        Unreviewed.

        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/WebKitBuildbot.js:
        (WebKitBuildbot): It looks like XMLHttpRequest may not like HSTS redirects, let's try to avoid these.

2014-09-23  Tibor Meszaros  <tmeszaros.u-szeged@partner.samsung.com>

        Make Tools/BuildSlaveSupport/wait-for-SVN-server.py handle server donwtime
        https://bugs.webkit.org/show_bug.cgi?id=137026

        Reviewed by Csaba Osztrogonác.

        * BuildSlaveSupport/wait-for-SVN-server.py:
        (getLatestSVNRevision):
        (waitForSVNRevision):

2014-09-23  Tibor Meszaros  <tmeszaros.u-szeged@partner.samsung.com>

        Remove unlinkZeroFiles from build-webkit
        https://bugs.webkit.org/show_bug.cgi?id=137018

        Reviewed by Csaba Osztrogonác.

        * Scripts/build-webkit:
        (unlinkZeroFiles): Deleted.

2014-09-23  Rohit Kumar  <kumar.rohit@samsung.com>

        [GTK] Minibrowser : Add keyboard support for stop page load
        https://bugs.webkit.org/show_bug.cgi?id=136857

        Reviewed by Philippe Normand.

        Keyboard support to stop page load in GTK Minibrowser using F6 and Escape keys.

        * MiniBrowser/gtk/BrowserWindow.c:
        (stopPageLoad): Callback to stop page load.
        (browser_window_init):

2014-09-22  Rohit Kumar  <kumar.rohit@samsung.com>

        [EFL][WK2] Minibrowser : Add keyboard support for page reload while ignoring cache
        https://bugs.webkit.org/show_bug.cgi?id=136813

        Reviewed by Gyuyoung Kim.

        Ctrl+r is used for page reload along with F5. Ctrl+Shift+r and Ctrl+F5 is used for page reload while ignoring cache.

        * MiniBrowser/efl/main.c:
        (on_key_down):

2014-09-22  Daniel Bates  <dabates@apple.com>

        [Cocoa] Add UI delegate callback when window.close() is called